# Frinfo

./: .envrc  .ghc.environment.x86_64-linux-8.2.1  .gitignore  .travis.yml  LICENSE  README.md  cabal.project  flake.nix  frinfo.cabal  hindentall.sh  honky.cabal  stack.yaml
app/: Main.hs
benchmark/: Benchmarks.hs  Main.hs
src/: Frinfo.hs  Honky.hs  Lib.hs
src/Frinfo/: Colors.hs  Config.hs  DBus.hs  Free.hs  INotify.hs  MPD.hs  Parsers.hs  Scripts.hs  Structure.hs
src/Honky/: Colors.hs  Free.hs  Parsers.hs  Scripts.hs
