name:                frinfo
version:             0.2.0.0
synopsis:            Print system information to stdout
description:         Please see README.md
homepage:            http://github.com/Arguggi/frinfo
license:             MIT
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
copyright:           2016 Arguggi
category:            Utils
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frinfo.Config
                     , Frinfo.DBus
                     , Frinfo.Free
                     , Frinfo.MPD
                     , Frinfo.INotify
                     , Frinfo.Parsers
                     , Frinfo.Scripts
                     , Frinfo.Structure
  build-depends:       base >= 4.7 && < 5
                     , async
                     , attoparsec
                     , containers
                     , dbus
                     , foldl
                     , formatting
                     , free
                     , hinotify
                     , libmpd
                     , mtl
                     , safe
                     , system-filepath
                     , text
                     , time
                     , turtle
                     , unix
  default-language:    Haskell2010
  ghc-options:         -Wall -O

executable frinfo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O
  build-depends:       base
                     , free
                     , frinfo
                     , mtl
                     , optparse-applicative
                     , optparse-applicative
                     , process
                     , safe
                     , slave-thread
                     , text
                     , time
  default-language:    Haskell2010

test-suite frinfo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , frinfo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O
  default-language:    Haskell2010

benchmark frinfo-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , frinfo
                     , mtl
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/Arguggi/frinfo
