name:                frinfo
version:             0.2.0.0
synopsis:            Print system information to stdout
description:         Please see README.md
homepage:            http://github.com/Arguggi/frinfo
license:             MIT
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
copyright:           2016 Arguggi
category:            Utils
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frinfo.Config
                     , Frinfo.DBus
                     , Frinfo.Free
                     , Frinfo.MPD
                     , Frinfo.INotify
                     , Frinfo.Parsers
                     , Frinfo.Scripts
                     , Frinfo.Structure
  build-depends:       base >= 4.7 && < 5
                     , async >=2.1
                     , attoparsec >=0.13
                     , containers >=0.5
                     , data-default >=0.6
                     , dbus >=0.10
                     , foldl >=1.2
                     , formatting >=6.2
                     , free >=4.12
                     , hinotify >=0.3
                     , lens >=4.14
                     , libmpd >=0.9
                     , mtl >=2.2
                     , safe >=0.3
                     , system-filepath >=0.4
                     , text >=1.2
                     , time >=1.6
                     , turtle >=1.3
                     , unix >=2.7
  default-language:    Haskell2010
  ghc-options:         -Wall

executable frinfo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , async >=2.1
                     , data-default >=0.6
                     , free >=4.12
                     , frinfo
                     , lens >=4.14
                     , mtl >=2.2
                     , optparse-applicative >=0.13
                     , process >=1.4
                     , safe >=0.3
                     , slave-thread >=1.0
                     , text >=1.2
                     , time >=1.6
  default-language:    Haskell2010

test-suite frinfo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.9
                     , frinfo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

benchmark frinfo-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base >=4.9
                     , criterion >=1.1
                     , data-default >=0.6
                     , frinfo
                     , mtl >=2.2
                     , text >=1.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/Arguggi/frinfo
