name:                frinfo
version:             0.2.0.0
synopsis:            Print system information to stdout
description:         Please see README.md
homepage:            http://github.com/Arguggi/frinfo
license:             MIT
license-file:        LICENSE
author:              Arguggi
maintainer:          arguggi@gmail.com
copyright:           2016 Arguggi
category:            Utils
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frinfo.Config
                     , Frinfo.DBus
                     , Frinfo.Free
                     , Frinfo.MPD
                     , Frinfo.INotify
                     , Frinfo.Parsers
                     , Frinfo.Scripts
                     , Frinfo.Structure
  build-depends:       base
                     , async
                     , attoparsec
                     , containers
                     , data-default
                     , dbus
                     , foldl
                     , formatting
                     , free
                     , hinotify
                     , lens
                     -- , libmpd
                     , mtl
                     , process
                     , safe
                     , system-filepath
                     , text
                     , time
                     , unix
  default-language:    Haskell2010
  ghc-options:         -Wall

executable frinfo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , async
                     , data-default
                     , directory
                     , free
                     , frinfo
                     , lens
                     , mtl
                     , optparse-applicative
                     , process
                     , safe
                     , slave-thread
                     , text
                     , time
  default-language:    Haskell2010

test-suite frinfo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

benchmark frinfo-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , data-default
                     , frinfo
                     , mtl
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/Arguggi/frinfo
