name:                honky
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/honky#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Honky
  other-modules:       Honky.Colors
                     , Honky.Free
                     , Honky.Parsers
                     , Honky.Scripts
  build-depends:       base >= 4.7 && < 5
                     , async
                     , attoparsec
                     , free
                     , process
                     , safe
                     , text
                     , time
  default-language:    Haskell2010

executable honky-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , honky
  default-language:    Haskell2010

test-suite honky-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , honky
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable honky-benchmark
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , honky
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/honky
